Fix alignment on firefox

--- a/source/icsm/results/results.css
+++ b/source/icsm/results/results.css
@@ -85,4 +85,6 @@
     top: 104px;
     overflow-x: hidden;
     bottom: 0;
+    left:0;
+    right:0;
 }
